traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:18: error: Missing closing brace `}' assumed here
}
^